bk_ida/gccida/c3/optimize_mode_switching
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_mode_switching/src/lcm.c:1554:1: error: use of undeclared identifier 'transp_0'; did you mean 'transp'?
transp_0 = sbitmap_vector_alloc( n_basic_blocks, 1u); 
^~~~~~~~
transp
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_mode_switching/src/lcm.c:889:17: note: 'transp' declared here
static sbitmap *transp;
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_mode_switching/src/lcm.c:1555:1: error: use of undeclared identifier 'comp_0'; did you mean 'comp'?
comp_0 = sbitmap_vector_alloc( n_basic_blocks, 1u); 
^~~~~~
comp
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_mode_switching/src/lcm.c:890:17: note: 'comp' declared here
static sbitmap *comp;
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_mode_switching/src/lcm.c:1556:22: error: use of undeclared identifier 'transp_0'; did you mean 'transp'?
sbitmap_vector_ones( transp_0, n_basic_blocks); 
                     ^~~~~~~~
                     transp
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_mode_switching/src/lcm.c:889:17: note: 'transp' declared here
static sbitmap *transp;
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_mode_switching/src/lcm.c:1612:1: error: use of undeclared identifier 'transp_0'; did you mean 'transp'?
transp_0[i]->elms[0] &= ~1uLL; 
^~~~~~~~
transp
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_mode_switching/src/lcm.c:889:17: note: 'transp' declared here
static sbitmap *transp;
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_mode_switching/src/lcm.c:1618:34: error: use of undeclared identifier 'reg_becomes_live_0'; did you mean 'reg_becomes_live'?
note_stores( *( ( rtx *)v6 + 4), reg_becomes_live_0, &v63); 
                                 ^~~~~~~~~~~~~~~~~~
                                 reg_becomes_live
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_mode_switching/src/lcm.c:993:1: note: 'reg_becomes_live' declared here
reg_becomes_live (reg, setter, live)
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_mode_switching/src/lcm.c:1680:37: error: use of undeclared identifier 'comp_0'
v26 = (  struct simple_bitmap_def *)comp_0; 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_mode_switching/src/lcm.c:1681:22: error: use of undeclared identifier 'comp_0'; did you mean 'comp'?
sbitmap_vector_zero( comp_0, n_basic_blocks); 
                     ^~~~~~
                     comp
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_mode_switching/src/lcm.c:890:17: note: 'comp' declared here
static sbitmap *comp;
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_mode_switching/src/lcm.c:1686:7: error: use of undeclared identifier 'comp_0'; did you mean 'comp'?
v29 = comp_0; 
      ^~~~~~
      comp
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_mode_switching/src/lcm.c:890:17: note: 'comp' declared here
static sbitmap *comp;
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_mode_switching/src/lcm.c:1715:19: error: use of undeclared identifier 'transp_0'; did you mean 'transp'?
sbitmap_not( v26, transp_0[v32-- - 2]); 
                  ^~~~~~~~
                  transp
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_mode_switching/src/lcm.c:889:17: note: 'transp' declared here
static sbitmap *transp;
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_mode_switching/src/lcm.c:1720:38: error: use of undeclared identifier 'transp_0'; did you mean 'transp'?
v33 = pre_edge_lcm( ( FILE *)v26, 1, transp_0, comp_0, antic, ( sbitmap *)v24, &insert_0, &delete); 
                                     ^~~~~~~~
                                     transp
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_mode_switching/src/lcm.c:889:17: note: 'transp' declared here
static sbitmap *transp;
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_mode_switching/src/lcm.c:1720:48: error: use of undeclared identifier 'comp_0'; did you mean 'comp'?
v33 = pre_edge_lcm( ( FILE *)v26, 1, transp_0, comp_0, antic, ( sbitmap *)v24, &insert_0, &delete); 
                                               ^~~~~~
                                               comp
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_mode_switching/src/lcm.c:890:17: note: 'comp' declared here
static sbitmap *comp;
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_mode_switching/src/lcm.c:1720:81: error: use of undeclared identifier 'insert_0'; did you mean 'insert'?
v33 = pre_edge_lcm( ( FILE *)v26, 1, transp_0, comp_0, antic, ( sbitmap *)v24, &insert_0, &delete); 
                                                                                ^~~~~~~~
                                                                                insert
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_mode_switching/src/lcm.c:892:17: note: 'insert' declared here
static sbitmap *insert;
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_mode_switching/src/lcm.c:1731:8: error: use of undeclared identifier 'insert_0'; did you mean 'insert'?
if ( ( insert_0[v35 - 2]->elms[0] & 1) != 0 ) 
       ^~~~~~~~
       insert
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_mode_switching/src/lcm.c:892:17: note: 'insert' declared here
static sbitmap *insert;
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_mode_switching/src/lcm.c:1760:7: error: use of undeclared identifier 'transp_0'; did you mean 'transp'?
v43 = transp_0[index]; 
      ^~~~~~~~
      transp
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_mode_switching/src/lcm.c:889:17: note: 'transp' declared here
static sbitmap *transp;
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_mode_switching/src/lcm.c:1781:8: error: use of undeclared identifier 'insert_0'; did you mean 'insert'?
if ( ( insert_0[v44 - 2]->elms[0] & 1) != 0 ) 
       ^~~~~~~~
       insert
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_mode_switching/src/lcm.c:892:17: note: 'insert' declared here
static sbitmap *insert;
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_mode_switching/src/lcm.c:1808:7: error: use of undeclared identifier 'transp_0'; did you mean 'transp'?
v50 = transp_0[v49]; 
      ^~~~~~~~
      transp
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_mode_switching/src/lcm.c:889:17: note: 'transp' declared here
static sbitmap *transp;
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_mode_switching/src/lcm.c:1901:7: error: use of undeclared identifier 'transp_0'; did you mean 'transp'?
free( transp_0); 
      ^~~~~~~~
      transp
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_mode_switching/src/lcm.c:889:17: note: 'transp' declared here
static sbitmap *transp;
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_mode_switching/src/lcm.c:1902:7: error: use of undeclared identifier 'comp_0'; did you mean 'comp'?
free( comp_0); 
      ^~~~~~
      comp
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_mode_switching/src/lcm.c:890:17: note: 'comp' declared here
static sbitmap *comp;
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_mode_switching/src/lcm.c:1904:7: error: use of undeclared identifier 'insert_0'; did you mean 'insert'?
free( insert_0); 
      ^~~~~~~~
      insert
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_mode_switching/src/lcm.c:892:17: note: 'insert' declared here
static sbitmap *insert;
                ^
19 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_mode_switching/src/obj/lcm.o] Error 1
